examples/test/testpolicy10068.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10068
  namespace: namespace290
spec:
  podSelector:
    matchLabels:
      key15: value31
      key39: value11
      key29: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value47
          key7: value46
          key37: value8
      podSelector:
        matchLabels:
          key9: value41
